# EcoNeighbour

ai_service/: .gitignore  README.md  app.py  config.py  copilot-instructions.md  main.py  pyproject.toml
ai_service/routers/: invoice.py
ai_service/schemas/: invoice.py
ai_service/services/: invoice_parser.py
backend/: .env  .env.example  .gitignore  index.js  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts  seed.ts  swagger.ts
backend/src/config/: db.js
backend/src/controllers/: auth.controller.ts  bills.controller.ts  leaderboard.controller.ts  neighborhoods.controller.ts  notifications.controller.ts  users.controller.ts
backend/src/middleware/: auth.ts  upload.ts
backend/src/routes/: auth.ts  bills.ts  leaderboard.ts  neighborhoods.ts  notifications.ts  users.ts
mobile/: app.json  package-lock.json  package.json
mobile/animations/: AnimatedButton.tsx  AnimatedNumber.tsx  ErrorShake.tsx  FadeInSlide.tsx  ProgressCircle.tsx  SkeletonLoader.tsx  SuccessCheckmark.tsx  index.ts
mobile/app/: _layout.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx  register.tsx
mobile/app/(tabs)/: __fab__.tsx  _layout.tsx  index.tsx  leaderboard.tsx  neighborhood.tsx  profile.tsx
mobile/app/bill/: camera.tsx  review.tsx  success.tsx
mobile/app/neighborhood/: [id].tsx
mobile/constants/: theme.ts
mobile/hooks/: useTheme.ts
mobile/services/: api.ts  auth.api.ts  bills.api.ts  leaderboard.api.ts  neighborhood.api.ts  notifications.ts  users.api.ts
mobile/stores/: auth.store.ts
mobile/types/: api.ts
(+6 files in other folders)
