[project]
name = "ai-service"
version = "0.1.0"
description = "ai service of econeighboor project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codecarbon>=3.2.6",
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "ollama>=0.6.2",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
]
